--- a/test.html
+++ b/test.html
@@ -5,124 +5,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        /* ----------home section slider css */
-
-        .slider__slider {
-  height: 100vh; /* Set height to occupy full viewport height */
-  width: 100%; /* Set width to occupy full viewport width */
-  background-size: cover; /* Ensure the background image covers the entire slider area */
-  background-position: center; /* Center the background image */
-  scroll-snap-align: start; /* Align slides to start of the slider */
-  position: relative;
-}
-
-.slider__slider{
-  height: 80vh;
-  min-width:100vw;
-  width: 100vw;
-  
-}
-.slide1{
-    background-image: url("./images/image2.jpg");
-}
-.slide2{
-    background-image: url("./images/image1.jpg");
-}
-.slide3{
-  background-image: url("./images/image3.jpg");
-}
-.slide4{
-  background-image: url("./images/image4.jpg");
-}
-  .slide5{
-  background-image: url("./images/image1.jpg");
-}
-
+        .btn{
+            height: 30px;
+            width: 120px;
+            border: 2px solid black;
+            background: green;
+            color: whitesmoke;
+            text-align: center;
+            text-transform: uppercase;
+            position: relative;
+            z-index: 2;
+            cursor: pointer;
+            overflow: hidden;
+            transition: 0.3s ease;
+            
+        }
+        .btn::before{
+            position: absolute;
+            content: "";
+            height: 100%;
+            background-color: black;
+            top:0;
+            left:0;
+            z-index: -1;
+            transition: 0.3s ease;
+            
+        }
+        .btn:hover::before{
+            width: 100%;
+            transition: 0.3s ease;
+            height: 100%;
+        }
     </style>
 </head>
 <body>
-    <section class="home-section">
 
-        <div class="slider">
-            <!-- slide1 start -->
-            <div class="slider__slider slide1">
-                <div class="overlay"></div>
-                <div class="slide-detail">
-                    <h1>Lorem, ipsum dolor.</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa aperiam, est illum itaque aut,
-                        a
-                        earum temporibus ab animi ratione, sunt ipsa!</p>
-                    <a href="view_products.php" class="btn">shop now</a>
-                    <div class="hero-dec-top"></div>
-                    <div class="hero-dec-bottom"></div>
-                </div>
-            </div>
-            <!-- slide1 end -->
-
-            <!-- slide2 start -->
-            <div class="slider__slider slide2">
-                <div class="overlay"></div>
-                <div class="slide-detail">
-                    <h1>Lorem, ipsum dolor.</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa aperiam, est illum itaque aut,
-                        a
-                        earum temporibus ab animi ratione, sunt ipsa!</p>
-                    <a href="view_products.php" class="btn">shop now</a>
-                    <div class="hero-dec-top"></div>
-                    <div class="hero-dec-bottom"></div>
-                </div>
-            </div>
-            <!-- slide2 end -->
-
-            <!-- slide3 start -->
-            <div class="slider__slider slide3">
-                <div class="overlay"></div>
-                <div class="slide-detail">
-                    <h1>Lorem, ipsum dolor.</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa aperiam, est illum itaque aut,
-                        a
-                        earum temporibus ab animi ratione, sunt ipsa!</p>
-                    <a href="view_products.php" class="btn">shop now</a>
-                    <div class="hero-dec-top"></div>
-                    <div class="hero-dec-bottom"></div>
-                </div>
-            </div>
-            <!-- slide3 END -->
-
-            <!-- slide4 start -->
-            <div class="slider__slider slide4">
-                <div class="overlay"></div>
-                <div class="slide-detail">
-                    <h1>Lorem, ipsum dolor.</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa aperiam, est illum itaque aut,
-                        a
-                        earum temporibus ab animi ratione, sunt ipsa!</p>
-                    <a href="view_products.php" class="btn">shop now</a>
-                    <div class="hero-dec-top"></div>
-                    <div class="hero-dec-bottom"></div>
-                </div>
-            </div>
-            <!-- slide4 end -->
-
-            <!-- slide5 start -->
-            <div class="slider__slider slide5">
-                <div class="overlay"></div>
-                <div class="slide-detail">
-                    <h1>Lorem, ipsum dolor.</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa aperiam, est illum itaque aut,
-                        a
-                        earum temporibus ab animi ratione, sunt ipsa!</p>
-                    <a href="view_products.php" class="btn">shop now</a>
-                    <div class="hero-dec-top"></div>
-                    <div class="hero-dec-bottom"></div>
-                </div>
-            </div>
-            <!-- slide5 end -->
-
-            <!-- home slider end -->
-            <div class="left-arrow"><i class="bx bxs-left-arrow"></i></div>
-            <div class="right-arrow"><i class="bx bxs-right-arrow"></i></div>
-        </div>
-    </section>
+    <div class="btn">button</div>
 </body>
 </html>
